cabal-version: 1.12

name:           asteroids
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/otrebus/asteroids#readme>
homepage:       https://github.com/otrebus/asteroids#readme
bug-reports:    https://github.com/otrebus/asteroids/issues
author:         Peter Otrebus-Larsson
maintainer:     example@example.com
copyright:      2020 Peter Otrebus-Larsson
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/asteroids

library
  exposed-modules:
      Lib
      GameState
      Math
      Player
      Font
  other-modules:
      Paths_asteroids
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , GLFW-b == 1.*
    , OpenGL >= 3 && < 3.1
    , mtl == 2.2.2
    , random
    , MonadRandom
  default-language: Haskell2010

executable asteroids-exe
  main-is: Main.hs
  other-modules:
      Paths_asteroids
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      asteroids
    , base >=4.7 && <5
    , GLFW-b == 1.*
    , OpenGL >= 3 && < 3.1
    , mtl == 2.2.2
    , random
    , MonadRandom
  default-language: Haskell2010

test-suite asteroids-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_asteroids

  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      asteroids
    , base >=4.7 && <5
  default-language: Haskell2010
