cabal-version: 1.12

name:           asteroids
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/otrebus/asteroids#readme>
homepage:       https://github.com/otrebus/asteroids#readme
bug-reports:    https://github.com/otrebus/asteroids/issues
author:         Peter Otrebus-Larsson
maintainer:     otrebus@gmail.com
copyright:      2020 Peter Otrebus-Larsson
license:        BSD3
license-file:   LICENSE
build-type:     Simple


source-repository head
  type: git
  location: https://github.com/Otrebus/asteroids

executable asteroids-exe
  main-is: Main.hs
  other-modules:
      Paths_asteroids
      Font
      Draw
      Game
      Menu
      State
      Math
      Player
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , GLFW-b == 3.3.0.0
    , OpenGL >= 3 && < 3.1
    , mtl == 2.2.2
    , random
    , MonadRandom
  default-language: Haskell2010
